# soil-moisture

./: .gitignore  CMakeLists.txt  README.md  README.rst  prj.conf  prj_dev.conf  prj_low.conf  prj_nrf52840_low.conf  soil-adc.numbers  st_soil_meter_52811.overlay  v6.overlay
boards/: st_soil_sensor_52811.dts  st_soil_sensor_52833.dts
boards/OpenCoded/st_soil_sensor_52840/: Kconfig.defconfig  Kconfig.st_soil_sensor_52840  board.yml  st_soil_sensor_52840.yml  st_soil_sensor_52840_nrf52840.dts
boards/arm/st_soil_sensor_52833/: Kconfig.board  Kconfig.defconfig  board.cmake  st_soil_sensor_52833.dts  st_soil_sensor_52833.yaml  st_soil_sensor_52833_defconfig
driver/EPD/: CMakeLists.txt  DEV_Config.c  EPD_1in54b_V2.c  EPD_2in13b_V4.c  EPD_2in13b_V4.h  Kconfig
driver/EPD/experminetal/: Eink-7segment.c  opencoded_lvgl_display.c  own_zephyr_display_driver.c
dts/bindings/drivers/: generic,epd.yaml  opencoded,epd.yaml
src/: app.c  app.h  ble.c  ble.h  display.c  display.h  error.h  flash.c  flash.h  hardware.c  hardware.h  logic_control.c  logic_control.h  main.c  main.h  ntc.c  ntc.h  validation.c  validation.h
src/conectivity/: ble.c  ble.h  zb_zcl_soil_moisture_measurements.c  zb_zcl_soil_moisture_measurements.h  zigbee_app.c  zigbee_app.h  zigbee_app_utils_op.c  zigbee_app_utils_op.h
src/firmware/: flash.c  flash.h  hardware.c  hardware.h
